--- a/spec/fixtures/vcr_cassettes/TriannonClientDELETE/_delete_annotation/without_authentication/behaves_like_delete_annotations/returns_TRUE_when_deleting_an_annotation_that_exists.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientDELETE/_delete_annotation/without_authentication/behaves_like_delete_annotations/returns_TRUE_when_deleting_an_annotation_that_exists.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: http://localhost:3000/annotations/foo/%2F95%2F3d%2F87%2F42%2F953d8742-6b0d-464f-b2d2-3cafb5286aad
+    uri: http://localhost:3000/annotations/foo/%2F44%2F88%2F5a%2F75%2F44885a75-6c5b-4da8-8871-bb60932e42f7
     body:
       encoding: US-ASCII
       string: ''
@@ -31,13 +31,13 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 089b8f00-53f7-4d26-ab74-09474593c260
+      - 2aa1d1ad-b0b8-4b1c-bf91-09c7fb7e80b9
       X-Runtime:
-      - '0.020184'
+      - '0.014821'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 31 Jul 2015 23:57:52 GMT
+      - Mon, 03 Aug 2015 22:12:00 GMT
       Content-Length:
       - '1519'
       Connection:
@@ -46,10 +46,10 @@ http_interactions:
       - request_method=DELETE; path=/
     body:
       encoding: UTF-8
-      string: "<h2>error getting foo//95/3d/87/42/953d8742-6b0d-464f-b2d2-3cafb5286aad
+      string: "<h2>error getting foo//44/88/5a/75/44885a75-6c5b-4da8-8871-bb60932e42f7
         from LDP</h2><html>\n<head>\n<meta http-equiv=\"Content-Type\" content=\"text/html;
         charset=ISO-8859-1\"/>\n<title>Error 404 Not Found</title>\n</head>\n<body><h2>HTTP
-        ERROR 404</h2>\n<p>Problem accessing /fedora/rest/anno/foo/95/3d/87/42/953d8742-6b0d-464f-b2d2-3cafb5286aad.
+        ERROR 404</h2>\n<p>Problem accessing /fedora/rest/anno/foo/44/88/5a/75/44885a75-6c5b-4da8-8871-bb60932e42f7.
         Reason:\n<pre>    Not Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -62,10 +62,10 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 23:57:52 GMT
+  recorded_at: Mon, 03 Aug 2015 22:12:00 GMT
 - request:
     method: get
-    uri: http://localhost:3000/annotations/foo/%2F95%2F3d%2F87%2F42%2F953d8742-6b0d-464f-b2d2-3cafb5286aad
+    uri: http://localhost:3000/annotations/foo/%2F44%2F88%2F5a%2F75%2F44885a75-6c5b-4da8-8871-bb60932e42f7
     body:
       encoding: US-ASCII
       string: ''
@@ -94,23 +94,23 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 89012c11-9738-4c5a-9276-b86a7850779e
+      - f05e8bc2-838f-4017-a4d6-3eb17ceef8e6
       X-Runtime:
-      - '0.015756'
+      - '0.015688'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 31 Jul 2015 23:57:52 GMT
+      - Mon, 03 Aug 2015 22:12:00 GMT
       Content-Length:
       - '1519'
       Connection:
       - Keep-Alive
     body:
       encoding: UTF-8
-      string: "<h2>error getting foo//95/3d/87/42/953d8742-6b0d-464f-b2d2-3cafb5286aad
+      string: "<h2>error getting foo//44/88/5a/75/44885a75-6c5b-4da8-8871-bb60932e42f7
         from LDP</h2><html>\n<head>\n<meta http-equiv=\"Content-Type\" content=\"text/html;
         charset=ISO-8859-1\"/>\n<title>Error 404 Not Found</title>\n</head>\n<body><h2>HTTP
-        ERROR 404</h2>\n<p>Problem accessing /fedora/rest/anno/foo/95/3d/87/42/953d8742-6b0d-464f-b2d2-3cafb5286aad.
+        ERROR 404</h2>\n<p>Problem accessing /fedora/rest/anno/foo/44/88/5a/75/44885a75-6c5b-4da8-8871-bb60932e42f7.
         Reason:\n<pre>    Not Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -123,5 +123,5 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 23:57:52 GMT
+  recorded_at: Mon, 03 Aug 2015 22:12:00 GMT
 recorded_with: VCR 2.9.3
