--- a/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/gets_an_open_annotation_by_ID_with_content_type_application/ld_json_.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/gets_an_open_annotation_by_ID_with_content_type_application/ld_json_.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/annotations/bar/%2F48%2F84%2F25%2F42%2F48842542-1dec-404f-8381-aac4dbf8f3e1
+    uri: http://localhost:3000/annotations/bar/%2F11%2F4f%2F9b%2F26%2F114f9b26-4b59-4e9b-a3a8-41b03318bc5f
     body:
       encoding: US-ASCII
       string: ''
@@ -29,27 +29,27 @@ http_interactions:
       Content-Type:
       - application/ld+json; charset=utf-8
       Etag:
-      - W/"e670c2f0b3150dfbae5814601c3b44ed"
+      - W/"f43a65b986df14da43bb01d808ef77f3"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 4cdbca76-dc76-42c3-83ca-b2b4b2117e03
+      - 697d85be-dfae-42cc-93ba-48d3b1852e54
       X-Runtime:
-      - '0.848487'
+      - '0.698935'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 31 Jul 2015 23:58:31 GMT
+      - Mon, 03 Aug 2015 22:12:30 GMT
       Content-Length:
       - '447'
       Connection:
       - Keep-Alive
     body:
       encoding: UTF-8
-      string: '{"@context":"http://www.w3.org/ns/oa-context-20130208.json","@graph":[{"@id":"_:g69960157202240","@type":["dctypes:Text","cnt:ContentAsText"],"chars":"I
-        love this!","format":"text/plain","language":"en"},{"@id":"http://your.triannon-server.com/annotations/bar/48/84/25/42/48842542-1dec-404f-8381-aac4dbf8f3e1","@type":"oa:Annotation","hasBody":"_:g69960157202240","hasTarget":"http://purl.stanford.edu/kq131cs7229","motivatedBy":"oa:commenting"}]}'
+      string: '{"@context":"http://www.w3.org/ns/oa-context-20130208.json","@graph":[{"@id":"_:g69926410643100","@type":["dctypes:Text","cnt:ContentAsText"],"chars":"I
+        love this!","format":"text/plain","language":"en"},{"@id":"http://your.triannon-server.com/annotations/bar/11/4f/9b/26/114f9b26-4b59-4e9b-a3a8-41b03318bc5f","@type":"oa:Annotation","hasBody":"_:g69926410643100","hasTarget":"http://purl.stanford.edu/kq131cs7229","motivatedBy":"oa:commenting"}]}'
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 23:58:31 GMT
+  recorded_at: Mon, 03 Aug 2015 22:12:30 GMT
 - request:
     method: get
     uri: http://www.w3.org/ns/oa-context-20130208.json
@@ -69,7 +69,7 @@ http_interactions:
       message: Temporary Redirect
     headers:
       Date:
-      - Fri, 31 Jul 2015 23:58:31 GMT
+      - Mon, 03 Aug 2015 22:12:31 GMT
       Server:
       - Apache/2
       Location:
@@ -77,7 +77,7 @@ http_interactions:
       Cache-Control:
       - max-age=21600
       Expires:
-      - Sat, 01 Aug 2015 05:58:31 GMT
+      - Tue, 04 Aug 2015 04:12:31 GMT
       Content-Length:
       - '240'
       Content-Type:
@@ -93,7 +93,7 @@ http_interactions:
         <p>The document has moved <a href="http://www.w3.org/ns/oa.jsonld">here</a>.</p>
         </body></html>
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 23:58:31 GMT
+  recorded_at: Mon, 03 Aug 2015 22:12:31 GMT
 - request:
     method: get
     uri: http://www.w3.org/ns/oa.jsonld
@@ -115,7 +115,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 31 Jul 2015 23:58:31 GMT
+      - Mon, 03 Aug 2015 22:12:31 GMT
       Server:
       - Apache/2
       Last-Modified:
@@ -129,7 +129,7 @@ http_interactions:
       Cache-Control:
       - max-age=21600
       Expires:
-      - Sat, 01 Aug 2015 05:58:31 GMT
+      - Tue, 04 Aug 2015 04:12:31 GMT
       P3p:
       - policyref="http://www.w3.org/2014/08/p3p.xml"
       Access-Control-Allow-Origin:
@@ -1247,7 +1247,7 @@ http_interactions:
 
 
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 23:58:31 GMT
+  recorded_at: Mon, 03 Aug 2015 22:12:31 GMT
 - request:
     method: get
     uri: http://www.w3.org/ns/oa-context-20130208.json
@@ -1267,7 +1267,7 @@ http_interactions:
       message: Temporary Redirect
     headers:
       Date:
-      - Fri, 31 Jul 2015 23:58:32 GMT
+      - Mon, 03 Aug 2015 22:12:31 GMT
       Server:
       - Apache/2
       Location:
@@ -1275,7 +1275,7 @@ http_interactions:
       Cache-Control:
       - max-age=21600
       Expires:
-      - Sat, 01 Aug 2015 05:58:32 GMT
+      - Tue, 04 Aug 2015 04:12:31 GMT
       Content-Length:
       - '240'
       Content-Type:
@@ -1291,7 +1291,7 @@ http_interactions:
         <p>The document has moved <a href="http://www.w3.org/ns/oa.jsonld">here</a>.</p>
         </body></html>
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 23:58:32 GMT
+  recorded_at: Mon, 03 Aug 2015 22:12:31 GMT
 - request:
     method: get
     uri: http://www.w3.org/ns/oa.jsonld
@@ -1313,7 +1313,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 31 Jul 2015 23:58:32 GMT
+      - Mon, 03 Aug 2015 22:12:31 GMT
       Server:
       - Apache/2
       Last-Modified:
@@ -1327,7 +1327,7 @@ http_interactions:
       Cache-Control:
       - max-age=21600
       Expires:
-      - Sat, 01 Aug 2015 05:58:32 GMT
+      - Tue, 04 Aug 2015 04:12:31 GMT
       P3p:
       - policyref="http://www.w3.org/2014/08/p3p.xml"
       Access-Control-Allow-Origin:
@@ -2445,5 +2445,5 @@ http_interactions:
 
 
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 23:58:32 GMT
+  recorded_at: Mon, 03 Aug 2015 22:12:32 GMT
 recorded_with: VCR 2.9.3
