--- a/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/gets_an_open_annotation_by_ID_with_content_type_application/rdf_xml_.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/gets_an_open_annotation_by_ID_with_content_type_application/rdf_xml_.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/annotations/bar/%2F48%2F84%2F25%2F42%2F48842542-1dec-404f-8381-aac4dbf8f3e1
+    uri: http://localhost:3000/annotations/bar/%2F11%2F4f%2F9b%2F26%2F114f9b26-4b59-4e9b-a3a8-41b03318bc5f
     body:
       encoding: US-ASCII
       string: ''
@@ -29,17 +29,17 @@ http_interactions:
       Content-Type:
       - application/rdf+xml; charset=utf-8
       Etag:
-      - W/"e5c42338624ceb2c74ddca4e03b85543"
+      - W/"0889150704a17b8651df837c478a2571"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 0f674017-8ea1-474b-9b39-fa6a045679b6
+      - a01d9876-85ff-437a-ad79-b26c55e079bc
       X-Runtime:
-      - '0.162966'
+      - '0.141135'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 31 Jul 2015 23:58:32 GMT
+      - Mon, 03 Aug 2015 22:12:32 GMT
       Content-Length:
       - '913'
       Connection:
@@ -49,9 +49,9 @@ http_interactions:
       string: |
         <?xml version='1.0' encoding='utf-8' ?>
         <rdf:RDF xmlns:cnt='http://www.w3.org/2011/content#' xmlns:dc11='http://purl.org/dc/elements/1.1/' xmlns:dcmitype='http://purl.org/dc/dcmitype/' xmlns:oa='http://www.w3.org/ns/oa#' xmlns:rdf='http://www.w3.org/1999/02/22-rdf-syntax-ns#'>
-          <oa:Annotation rdf:about='http://your.triannon-server.com/annotations/bar/48/84/25/42/48842542-1dec-404f-8381-aac4dbf8f3e1'>
+          <oa:Annotation rdf:about='http://your.triannon-server.com/annotations/bar/11/4f/9b/26/114f9b26-4b59-4e9b-a3a8-41b03318bc5f'>
             <oa:hasBody>
-              <dcmitype:Text rdf:nodeID='g69960207600240'>
+              <dcmitype:Text rdf:nodeID='g69926415579280'>
                 <rdf:type rdf:resource='http://www.w3.org/2011/content#ContentAsText'></rdf:type>
                 <dc11:format>text/plain</dc11:format>
                 <dc11:language>en</dc11:language>
@@ -64,5 +64,5 @@ http_interactions:
 
         </rdf:RDF>
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 23:58:32 GMT
+  recorded_at: Mon, 03 Aug 2015 22:12:32 GMT
 recorded_with: VCR 2.9.3
