--- a/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/gets_an_open_annotation_by_ID_with_content_type_application/x-turtle_.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/gets_an_open_annotation_by_ID_with_content_type_application/x-turtle_.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/annotations/bar/%2F48%2F84%2F25%2F42%2F48842542-1dec-404f-8381-aac4dbf8f3e1
+    uri: http://localhost:3000/annotations/bar/%2F11%2F4f%2F9b%2F26%2F114f9b26-4b59-4e9b-a3a8-41b03318bc5f
     body:
       encoding: US-ASCII
       string: ''
@@ -29,17 +29,17 @@ http_interactions:
       Content-Type:
       - application/x-turtle; charset=utf-8
       Etag:
-      - W/"b841c689178297a86b2acf78b3bc2908"
+      - W/"e8820caeae39270b8dc376ec568f9c1b"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - db04951b-f4ee-45e3-b9d8-876f87b1134b
+      - 9dda0e6c-f084-4f0d-b80b-d347b57c685c
       X-Runtime:
-      - '0.141400'
+      - '0.133606'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 31 Jul 2015 23:58:33 GMT
+      - Mon, 03 Aug 2015 22:12:32 GMT
       Content-Length:
       - '667'
       Connection:
@@ -54,7 +54,7 @@ http_interactions:
         @prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
         @prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
 
-        <http://your.triannon-server.com/annotations/bar/48/84/25/42/48842542-1dec-404f-8381-aac4dbf8f3e1> a oa:Annotation;
+        <http://your.triannon-server.com/annotations/bar/11/4f/9b/26/114f9b26-4b59-4e9b-a3a8-41b03318bc5f> a oa:Annotation;
            oa:hasBody [
              a dcmitype:Text,
                cnt:ContentAsText;
@@ -65,5 +65,5 @@ http_interactions:
            oa:hasTarget <http://purl.stanford.edu/kq131cs7229>;
            oa:motivatedBy oa:commenting .
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 23:58:33 GMT
+  recorded_at: Mon, 03 Aug 2015 22:12:32 GMT
 recorded_with: VCR 2.9.3
